syntax = "proto3";

package api;

option go_package = "server/cmd/api";

import "hz.proto";

message BaseResponse{
  int64 status_code = 1;
  string status_msg = 2;
}

message LoginRequest {
  string code = 1[(api.vd) = "len($) > 0"];
}

message LoginResponse {
  BaseResponse base_resp = 1;
  string token = 2;
  int64 expired_at = 3[(api.body) = "expired_at"];
}

message ELoginResponse{
  int32 code = 1;
  LoginResponse data = 2;
  string message = 3;
}

message AdminLoginRequest {
  string username = 1[(api.vd) = "len($) > 0"];
  string password = 2[(api.vd) = "len($) > 0"];
}

message AdminLoginResponse {
  BaseResponse base_resp = 1;
  string token = 2;
  int64 expired_at = 3[(api.body) = "expired_at"];
}

message EAdminLoginResponse{
  int32 code = 1;
  LoginResponse data = 2;
  string message = 3;
}

message ChangeAdminPasswordRequest {
  string old_password = 1[(api.body) = "old_password"];
  string new_password = 2[(api.body) = "new_password"];
}

message ChangeAdminPasswordResponse {
  BaseResponse base_resp = 1;
}

message EChangeAdminPasswordResponse {
  int32 code = 1;
  string message = 2;
}

message AdminELoginResponse{
  int32 code = 1;
  LoginResponse data = 2;
  string message = 3;
}

message UserInfo{
  int64 account_id = 1;
  string username = 2;
  int64 phone_number = 3;
  string avatar_url = 4;
}


message User{
  int64 account_id = 1;
  string username = 2;
  int64 phone_number = 3;
  int64 avatar_blob_id = 4;
  string open_id = 5;
}

message EUserInfo{
  int32 code = 1;
  UserInfo data = 2;
  string message = 3;
}

message GetUserInfoRequest{}

message GetUserInfoResponse{
  BaseResponse base_resp = 1;
  UserInfo user_info = 2;
}

message UpdateUserRequest{
  string username = 1;
  int64 phone_number = 2;
}

message UpdateUserResponse{
  BaseResponse base_resp = 1;
}

message EUpdateUserResponse{
  int32 code = 1;
  UpdateUserResponse data = 2;
  string message = 3;
}

message AddUserRequest{
  int64 account_id = 1;
  string username = 2;
  int64 phone_number = 3;
  int64 avatar_blob_id = 4;
  string open_id = 5;
}

message AddUserResponse{
  BaseResponse base_resp = 1;
}

message EAddUserResponse{
  int32 code = 1;
  string message = 2;
}

message DeleteUserRequest{
  int64 account_id = 1;
}

message DeleteUserResponse{
  BaseResponse base_resp = 1;
}

message EDeleteUserResponse{
  int32 code = 1;
  string message = 2;
}

message GetSomeUsersRequest{
}

message GetSomeUsersResponse{
  BaseResponse base_resp = 1;
  repeated User users = 2;
}

message EGetSomeUsersResponse{
  int32 code = 1;
  GetSomeUsersResponse data = 2;
  string message = 3;
}

message GetAllUsersRequest{
}

message GetAllUsersResponse{
  repeated User users = 1;
}

message EGetAllUsersResponse{
  int32 code = 1;
  GetAllUsersResponse data = 2;
  string message = 3;
}

message UploadAvatarRequest{}

message UploadAvatarResponse{
  BaseResponse base_resp = 1;
  string upload_url = 2;
}

message EUploadAvatarResponse{
  int32 code = 1;
  UploadAvatarResponse data = 2;
  string message = 3;
}

message CarEntity {
  string id = 1;
  Car car = 2;
}

message ECarEntity{
  int32 code = 1;
  CarEntity data = 2;
  string message = 3;
}

enum CarStatus {
  CS_NOT_SPECIFIED = 0;
  LOCKED = 1;
  UNLOCKING = 2;
  UNLOCKED = 3;
  LOCKING = 4;
}

message Driver {
  int64 id = 1;
  string avatar_url = 2[(api.body) = "avatar_url"];
}

message Location {
  double latitude = 1;
  double longitude = 2;
}

message Car {
  CarStatus status = 1;
  Driver driver = 2;
  Location position = 3;
  string trip_id = 4[(api.body) = "trip_id"];
  float power = 5;
  string plate_num = 6[(api.body) = "plate_num"];
}
message ECar{
  int32 code = 1;
  Car data = 2;
  string message = 3;
}

message CreateCarRequest {
  string plate_num = 6[(api.body) = "plate_num"];
}

message CreateCarResponse{
  BaseResponse base_resp = 1;
  CarEntity car_entity = 2;
}

message DeleteCarRequest{
  string id = 1[(api.vd) = "len($) > 0"];
}

message DeleteCarResponse{
  BaseResponse base_resp = 1;
}

message UpdateCarRequest{
  string id = 1[(api.vd) = "len($) > 0"];
  Car car = 2;
}

message UpdateCarResponse{
  BaseResponse base_resp = 1;
}

message GetAllCarsRequest{
}

message GetAllCarsResponse{
  BaseResponse base_resp = 1;
  repeated CarEntity cars = 2;
}

message GetSomeCarsRequest{
}

message GetSomeCarsResponse{
  BaseResponse base_resp = 1;
  repeated CarEntity cars = 2;
}

message GetCarRequest {
  string id = 1[(api.vd) = "len($) > 0"];
}

message GetCarResponse{
  BaseResponse base_resp = 1;
  Car car = 2;
}

message GetCarsRequest{
}

message GetCarsResponse{
  BaseResponse base_resp = 1;
  repeated CarEntity cars = 2;
}

message EGetCarsResponse{
  int32 code = 1;
  GetCarsResponse data = 2;
  string message = 3;
}

message LocationStatus{
  Location location = 1;
  int32 fee_cent = 2[(api.body) = "fee_cent"];
  double km_driven = 3[(api.body) = "km_driver"];
  string poi_name = 4[(api.body) = "poi_name"];
  int64 timestamp_sec = 5[(api.body) = "timestamp_sec"];
}

enum TripStatus {
  TS_NOT_SPECIFIED = 0;
  IN_PROGRESS = 1;
  FINISHED = 2;
}

message TripEntity{
  string id = 1;
  Trip trip = 2;
}

message ETripEntity{
  int32 code = 1;
  TripEntity data = 2;
  string message = 3;
}

message Trip{
  int64 account_id = 1[(api.body) = "account_id"];
  string car_id = 2[(api.body) = "car_id"];
  LocationStatus start = 3;
  LocationStatus current = 4;
  LocationStatus end = 5;
  TripStatus status = 6;
  string identity_id = 7[(api.body) = "identity_id"];
}

message ETrip{
  int32 code = 1;
  Trip data = 2;
  string message = 3;
}

message CreateTripRequest {
  Location start = 1;
  string car_id = 2[(api.body) = "car_id"];
  string avatar_url = 3[(api.body) = "avatar_url"];
}

message CreateTripResponse{
  BaseResponse base_resp = 1;
  TripEntity trip_entity = 2;
}

message GetTripRequest{
  string id = 1[(api.vd) = "len($) > 0"];
}

message GetTripResponse{
  BaseResponse base_resp = 1;
  Trip trip = 2;
}

message GetTripsRequest{
  TripStatus status = 1;
}

message GetTripsResponse{
  BaseResponse base_resp = 1;
  repeated TripEntity trips = 2;
}


message EGetTripsResponse{
  int32 code = 1;
  GetTripsResponse data = 2;
  string message = 3;
}

message UpdateTripRequest{
  string id = 1;
  Location current = 2;
  bool end_trip = 3[(api.body) = "end_trip"];
}

message UpdateTripResponse{
  BaseResponse base_resp = 1;
  Trip trip = 2;
}

enum Gender {
  G_NOT_SPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
}

enum IdentityStatus {
  UNSUBMITTED = 0;
  PENDING = 1;
  VERIFIED = 2;
}

message Profile {
  Identity identity = 1;
  IdentityStatus identity_status = 2[(api.body) = "identity_status"];
}

message EProfile{
  int32 code = 1;
  Profile data = 2;
  string message = 3;
}

message Identity {
  string lic_number = 1[(api.body) = "lic_number"];
  string name = 2;
  Gender gender = 3;
  int64 birth_date_millis = 4[(api.body) = "birth_date_millis"];
}

message EIdentity {
  int32 code = 1;
  Identity data = 2;
  string message = 3;
}

message GetProfileRequest {}

message GetProfileResponse{
  BaseResponse base_resp = 1;
  Profile profile = 2;
}

message SubmitProfileRequest {
  Identity identity = 2;
}

message SubmitProfileResponse{
  BaseResponse base_resp = 1;
  Profile profile = 2;
}

message ClearProfileRequest {}

message ClearProfileResponse{
  BaseResponse base_resp = 1;
  Profile profile = 2;
}

message GetProfilePhotoRequest {}

message GetProfilePhotoResponse {
  BaseResponse base_resp = 1;
  string url = 2;
}

message EGetProfilePhotoResponse {
  int32 code = 1;
  GetProfilePhotoResponse data = 2;
  string message = 3;
}


message CreateProfilePhotoRequest {}

message CreateProfilePhotoResponse {
  BaseResponse base_resp = 1;
  string upload_url = 2[(api.body) = "upload_url"];
}

message ECreateProfilePhotoResponse {
  int32 code = 1;
  CreateProfilePhotoResponse data = 2;
  string message = 3;
}

message CompleteProfilePhotoRequest {}

message CompleteProfilePhotoResponse{
  BaseResponse base_resp = 1;
  Identity identity = 2;
}

message ClearProfilePhotoRequest {}

message ClearProfilePhotoResponse {
  BaseResponse base_resp = 1;
}

message EClearProfilePhotoResponse {
  int32 code = 1;
  ClearProfilePhotoResponse data = 2;
  string message = 3;
}

service apiService {
  rpc Login (LoginRequest) returns (LoginResponse) {option (api.post) = "/user/login";}
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse) {option (api.get) = "/user/info";}
  rpc UpdateUserInfo (UpdateUserRequest) returns (UpdateUserResponse)  {option (api.post) = "/user/info";}
  rpc UploadAvatar (UploadAvatarRequest) returns (UploadAvatarResponse) {option (api.post) = "/user/avatar";}
  rpc AddUser (AddUserRequest) returns (AddUserResponse) {option (api.post) = "/user";}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {option (api.delete) = "/user";}
  rpc GetSomeUsers (GetSomeUsersRequest) returns (GetSomeUsersResponse) {option (api.get) = "/user/some";}
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {option (api.get) = "/user/all";}

  rpc AdminLogin (AdminLoginRequest) returns (AdminLoginResponse) {option (api.post) = "/admin/login";}
  rpc ChangeAdminPassword (ChangeAdminPasswordRequest) returns (ChangeAdminPasswordResponse) {option (api.post) = "/admin/password";}

  // for back-stage management
  rpc CreateCar (CreateCarRequest) returns (CreateCarResponse) {option (api.post) = "/car";}
  rpc DeleteCar (DeleteCarRequest) returns (DeleteCarResponse) {option (api.delete) = "/car";}
  rpc UpdateCar (UpdateCarRequest) returns (UpdateCarResponse) {option (api.post)="/car/update";}
  rpc GetSomeCars (GetSomeCarsRequest) returns (GetSomeCarsResponse) {option (api.get)="/cars/some";}
  rpc GetAllCars (GetAllCarsRequest) returns (GetAllCarsResponse) {option (api.get)="/cars/all";}

  // for mini-program
  rpc GetCar (GetCarRequest) returns (GetCarResponse) {option (api.get) = "/car";}
  rpc GetCars (GetCarsRequest) returns (GetCarsResponse) {option (api.get) = "/cars";}

  rpc GetProfile (GetProfileRequest) returns (GetProfilePhotoResponse) {option (api.get) = "/profile";}
  rpc SubmitProfile (SubmitProfileRequest) returns (SubmitProfileResponse) {option (api.post) = "/profile";}
  rpc ClearProfile (ClearProfileRequest) returns (ClearProfileResponse) {option (api.delete) = "/profile";}

  rpc GetProfilePhoto (GetProfilePhotoRequest) returns (GetProfilePhotoResponse) {option (api.get) = "/profile/photo";}
  rpc CreateProfilePhoto (CreateProfilePhotoRequest) returns (CreateProfilePhotoResponse) {option (api.post) = "/profile/photo";}
  rpc CompleteProfilePhoto (CompleteProfilePhotoRequest) returns (CompleteProfilePhotoResponse) {option (api.post) = "/profile/photo/complete";}
  rpc ClearProfilePhoto (ClearProfilePhotoRequest) returns (ClearProfilePhotoResponse) {option (api.delete) = "/profile/photo";}

  rpc CreateTrip (CreateTripRequest) returns (CreateTripResponse) {option (api.post) = "/trip";}
  rpc GetTrip(GetTripRequest) returns (GetTripResponse) {option (api.get) = "/trip/:id";}
  rpc GetTrips (GetTripsRequest) returns (GetTripsResponse) {option (api.get) = "/trips";}
  rpc UpdateTrip (UpdateTripRequest) returns (UpdateTripResponse) {option (api.put) = "/trip/:id";}
}